--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Bora ao mossar?</h1>
+  <h1>Lolzinho hoje?</h1>
   <a href="https://www.youtube.com/watch?v=izGwDsrQ1eQ">Sim</a>
   <button class="button" onmouseover="moveButton(this)" onclick="moveButton(this)">Não</button>
 </body>
